[package]
name = "strong-api-dump"
version = "0.1.0"
edition = "2024"

[dependencies]
strong-api-lib = { path = "../strong-api-lib" }
dotenv = "0.15"
reqwest = "0.12.14"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clickhouse = "0.13.2"
chrono = "0.4.40"

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["test-util"] }