[package]
name = "strong-api-lib"
version = "0.3.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
full = []